# intranet-Service

./: .env  README.md  alembic.ini  main.pyy  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0669b23d931d_add_location_to_document_model.py  1a2b3c4d5e6f_create_posts_tables.py
api/: main.py
app/: config.py  database.py  main.py
app/models/: document.py  post.py
app/routes/: documents.py  posts.py
app/schemas/: document.py  post.py
