[project]

requires-python = ">=3.11,<3.12"
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "fastapi==0.95.2",
    "pydantic==1.10.13",
    "uvicorn==0.20.0",
    "sqlalchemy==2.0.44",
    "psycopg2-binary==2.9.11",
    "python-decouple==3.8",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "requests==2.32.3"
]

